[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'


[project]
name = "django-linkedin-posts"
version = "0.0.2"
authors = [{ name = "Rami", email = "ramiboutas@protonmail.com" }]
description = "An app to manage Linkedin posts in a Django project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: Django",
  "Framework :: Django :: 4",
]

dependencies = ["linkedin-posts", "pillow", "django"]

[tool.setuptools]

packages = ["django_linkedin_posts", "django_linkedin_posts.migrations"]

[project.urls]
"Homepage" = "https://github.com/ramiboutas/django-linkedin-posts"
"Bug Tracker" = "https://github.com/ramiboutas/django-linkedin-posts/issues"


[tool.coverage.run]
branch = true
omit = ["tests/*", "manage.py", "config/*"]


[tool.coverage.paths]
source = ["django_linkedin_posts/"]
